fix : [FE] 견적서 페이지 디자인 수정

--- a/css/estimate/estimateCalculator.css
+++ b/css/estimate/estimateCalculator.css
@@ -28,7 +28,7 @@
     gap: 10px;
     margin-bottom: 20px;
 }
-.filter select{
+.filter button{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -96,12 +96,12 @@
     width: 25px;
     height: 30px;
 }
-.currentPage {
+.current-page {
     font-size: 25px;
     margin: 0 10px;
     font-weight: 300;
 }
-.totalPages {
+.total-pages {
     margin: 0 10px;
     font-size: 25px;
     color: rgb(160, 160, 160);
@@ -112,9 +112,6 @@
     font-size: 25px;
     color: rgb(160, 160, 160);
     font-weight: 300;
-}
-.noline {
-    border-bottom: none;
 }
 
 /* 그리드 요소 속성 */
@@ -130,7 +127,7 @@
     height: 180px;
     object-fit: cover;
 }
-.details {
+.detail {
     display: flex;
     flex-direction: column;
     text-align: left;
@@ -205,7 +202,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.replay {
+.reselection {
     display: flex;
     justify-content: right;
     margin-top: 37px;
@@ -225,6 +222,9 @@
     border-radius: 5px;
     font-size: 10px;
     color: #777;
+}
+.note-bold {
+    font-weight: 700;
 }
 
 /* 이전, 다음 버튼 */   
@@ -261,4 +261,93 @@
 }
 .contents-active {
     display: block;
+}
+
+/* 모달창 */
+.region-btn:hover {
+    background-color: #717171;
+    border: 1px solid #717171;
+}
+select {
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    appearance: none;
+}
+.options {
+    width: 200px;
+}
+.modal1, .modal3 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.modal-content {
+    max-width: 400px;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 45px;
+}
+.modal-q {
+    font-size: 30px;
+    font-weight: 600;
+    text-align: left;
+    margin: 0;
+    color: #000;
+}
+.modal-content p {
+    font-size: 16px;
+    font-weight: 400;
+    color: #545454;
+    text-align: left;
+    line-height: 1.5;
+    margin: 10px 0;
+}
+.modal-btn {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 30px;
+}
+.apply-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #fff;
+    background-color: #CA1A5A;
+    cursor: pointer;
+}
+.apply-btn:hover {
+    border: 1px solid rgba(202, 26, 90, 0.2);
+    background-color: rgba(202, 26, 90, 0.4);
+}
+.cancel-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #CA1A5A;
+    cursor: pointer;
+}
+.cancel-btn:hover {
+    background-color: rgba(202, 26, 90, 0.1);
+}
+.modal.show { 
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
