--- a/css/estimate/estimateFinal.css
+++ b/css/estimate/estimateFinal.css
@@ -8,6 +8,8 @@
     font-size: 23px;
     padding-bottom: 20px;
 }
+
+/* 업체 선택창 */
 .back p {
     margin-top: 10px;
     color: #757575;
@@ -30,11 +32,15 @@
     'GRAD' 0,
     'opsz' 12
 }
-.grid {
+
+/* 그리드 적용 */
+.content-box {
     display: grid;
     grid-row-gap: 25px;
 
 }
+
+/* 상단 공지 */
 .notice {
     padding: 25px;
     border: 1px solid #757575;
@@ -50,7 +56,9 @@
     color: #757575;
     line-height: 25px;
 }
-.select-content {
+
+/* 선택하신 목록 */
+.select {
     border: 100px;
 }
 .select-list { 
@@ -65,7 +73,7 @@
     font-size: 30px;
     border-bottom: 1px solid #000;
 }
-.studio {
+.company {
     padding: 10px;
 }
 .name {
@@ -74,54 +82,40 @@
     font-weight: 700;
     padding-bottom: 7px;
 }
-.studio img {
+.company img {
     width: 250px;
     height: 250px;
     float: left;
     margin-right: 30px;
 }
-.dress img {
-    width: 250px;
-    height: 250px;
-    float: left;
-    margin-right: 30px;
-}
-.makeup img {
-    width: 250px;
-    height: 250px;
-    float: left;
-    margin-right: 30px;
-}
-.studio-detail {
+.company-detail {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
 }
+
+/* 세부 옵션 */
 .options {
     padding-top: 20px;
     padding-bottom: 120px;
 }
-.detail-option {
+.option-detail {
     font-size: 20px;
     font-weight: 500;
 }
-.option1 {
+.option {
     display: flex;
     justify-content: space-between;
     padding: 10px;
     border-bottom: 1px solid rgb(117, 117, 117, 0.7);
 }
-.option2 {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px;
-    border-bottom: 1px solid rgb(117, 117, 117, 0.7);
-}
-.option3 {
+.option-bot {
     display: flex;
     justify-content: space-between;
     padding: 10px;
 }
+
+/* 가격 표시 */
 .regular {
     display: flex;
     justify-content: space-between;
@@ -146,10 +140,23 @@
     font-size: 20px;
     font-weight: bolder;
 }
+
+/* 하단 버튼 */
 .btn {
     display: flex;
     justify-content: space-between;
     margin: 40px 0px 10px;
+}
+.btn .back {
+    width: 270px;
+    height: auto;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #b6b6b6;
+    border: 1px solid;
+    border-radius: 5px;
+    cursor: pointer;
 }
 .btn .add {
     width: 270px;
@@ -161,14 +168,112 @@
     border-radius: 5px;
     cursor: pointer;
 }   
-.btn .back {
-    width: 270px;
-    height: auto;
-    padding: 10px 20px;
-    font-size: 16px;
+
+/* 예약 확인 모달창 */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.modal-content {
+    max-width: 450px;
+    width: 100%;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    padding: 45px;
+}
+.modal-q {
+    font-size: 19px;
+    font-weight: 600;
+    text-align: center;
+    margin: 0;
+    color: #CA1A5A;
+}
+.modal-content p {
+    font-size: 13px;
+    font-weight: 400;
+    color: #545454;
+    text-align: center;
+    line-height: 1.5;
+    margin: 20px 0;
+}
+.modal-btn {
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 30px 0px 30px;
+}
+.check-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
     color: #fff;
-    background-color: #b6b6b6;
-    border: 1px solid;
-    border-radius: 5px;
+    background-color: #CA1A5A;
     cursor: pointer;
+}
+.check-btn:hover {
+    border: 1px solid rgba(202, 26, 90, 0.2);
+    background-color: rgba(202, 26, 90, 0.4);
+}
+.cancel-btn {
+    font-size: 14px;
+    padding: 8px 40px;
+    border: 1px solid #CA1A5A;
+    border-radius: 7px;
+    color: #CA1A5A;
+    cursor: pointer;
+}
+.cancel-btn:hover {
+    background-color: rgba(202, 26, 90, 0.1);
+}
+.modal.show { 
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+}
+
+/* 예약 완료 모달창 */
+.modal2 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.4);   
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+.modal-complete {
+    font-size: 21px;
+    font-weight: 600;
+    text-align: center;
+    color: #CA1A5A;
+}
+.modal2.show2 { 
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
 }
