--- a/css/estimate/estimateDetail.css
+++ b/css/estimate/estimateDetail.css
@@ -1,3 +1,7 @@
+.container {
+    display: flex;
+    vertical-align: middle;
+}
 .container-title {
     font-size: 30px;
     color: #CA1A5A;
@@ -21,6 +25,8 @@
     cursor: pointer;
     flex: 1;
 }
+
+/* 그리드 */
 .main-grid {
     display: grid;
     grid-template-columns: 690px auto;
@@ -33,24 +39,14 @@
     border-radius: 10px;
     padding: 10px 30px;
 }
-.right-panel {
-    height: 700px;
-    border: 1px solid #757575;
-    border-radius: 10px;
-    padding: 10px 20px;
+.main {
+    display: flex;
 }
-.main img {
+.main-content img {
     width: 200px;
     height:200px;
     float: left;
     margin-right: 20px;
-}
-.content-bold {
-    font-weight: 600;
-    font-size: 18px;
-}
-.content-address {
-    font-size: 14px
 }
 .selected {
     margin: 10px;
@@ -59,6 +55,13 @@
 }
 .content-main {
     text-align: left;
+}
+.bold {
+    font-weight: 600;
+    font-size: 18px;
+}
+.address {
+    font-size: 14px
 }
 .basic-option {
     display: flex;
@@ -73,47 +76,48 @@
 .main-price {
     font-weight: 700;
 }
-.container {
-    display: flex;
-    vertical-align: middle;
-}
-.right-panel h2 {
-    font-size: 20px;
-    margin-bottom: 12px;
-    padding-bottom: 15px;
-    border-bottom: 1px solid #000;
-}
-.item-main {
-    display: flex;
-}
+
+/* 세부 옵션 */
 .option {
     display: flex;
     justify-content: space-between; 
 }
-.item-option .title {
-    font-size: 15px;
-    font-weight: bold;
-    color: #000;
-}
-.item-option {
+.option-item {
     font-size: 10px;
     color: #757575;
     margin-bottom: 10px;
 }
-.item-price {
+
+/* 세부 옵션 */
+.option {
+    margin-bottom: 15px;
+}
+.option-item .title {
+    font-size: 15px;
+    font-weight: bold;
+    color: #000;
+}
+.option span {
+    display: block;
+    margin-bottom: 5px;
+}
+.option-price {
     font-size: 15px;
     font-weight: bold;
 }
-.item {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
-    font-weight: 500;
+
+/* 선택하신 목록 */
+.selected-list {
+    height: 700px;
+    border: 1px solid #757575;
+    border-radius: 10px;
+    padding: 10px 20px;
 }
-.item img {
-    width: 10px;
-    height: auto;
-    margin-right: 8px;
+.selected-list h2 {
+    font-size: 20px;
+    margin-bottom: 12px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #000;
 }
 .item-title {
     display: flex;
@@ -126,22 +130,20 @@
 .items {
     margin-bottom: 250px;
 }
-.total {
-    font-weight: bold;
-    font-size: 18px;
+.item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    font-weight: 500;
 }
-.img-container img {
-    width: 100%;
+.item img {
+    width: 10px;
     height: auto;
-    border-radius: 8px;
+    margin-right: 8px;
+    cursor: pointer;
 }
-.option {
-    margin-bottom: 15px;
-}
-.option span {
-    display: block;
-    margin-bottom: 5px;
-}   
+
+/* 가격 표시 */
 .price {
     margin-bottom: 10px;
 }
@@ -175,10 +177,10 @@
     'GRAD' 0,
     'opsz' 14
 }
-.replay {
+.reselection {
     display: flex;
     justify-content: right;
-    margin-top: 52px;
+    margin-top: 48px;
     font-size: 13px;
 }
 .note {
