--- a/css/login/emailVertify.css
+++ b/css/login/emailVertify.css
@@ -4,20 +4,17 @@
 html{
     overflow:hidden;
 }
+
+/* 모달창 */
 .modal{
     position:absolute;
-    
     justify-content: center;
     top:0;
     left:25px;
     width:100%;
     height:100%;
-
-    
-
-   
 }
-.modal .modal_body{
+.modal-body{
     position: absolute;
     width: 500px;
     height: 600px;
@@ -25,11 +22,8 @@ html{
     text-align: center;
     top : 10px;
     box-shadow: 5px 5px 7px #c8c8c8c8;
-   
 }
-
-.modal .modal_body #email{
-    
+.modal-body #email{
     width: 300px;
     height: 50px;
     background-color: white;
@@ -39,32 +33,14 @@ html{
     border-radius: 4px;
     box-shadow: 5px 5px 7px #eeeeee;
 }
-
-.modal .modal_body #email:focus{
-    
-   
+.modal-body #email:focus{
     border: 1px solid #CA1A5A;
     outline: none;
     line-height: 20px;
-    
 }
 
-.modal .modal_body .check-point{
-    
-    width: 300px;
-    height: 50px;
-    background-color: #CA1A5A;
-    text-align: center;
-    top : 10px;
-    margin-bottom: 20px;
-    border-radius: 4px;
-    color: #fff;
-    border: none;
-
-}
-
-.modal .modal_body .check-time{
-    
+/* 버튼 */
+.email-send{
     width: 300px;
     height: 50px;
     background-color: #c8c8c8;
@@ -73,5 +49,16 @@ html{
     margin-bottom: 20px;
     border-radius: 4px;
     color: #dbdbdb;
+    border: none;
+}
+.close{   
+    width: 300px;
+    height: 50px;
+    background-color: #CA1A5A;
+    text-align: center;
+    top : 10px;
+    margin-bottom: 20px;
+    border-radius: 4px;
+    color: #fff;
     border: none;
 }
