chore : [FE] estimateStorage design change , likeListm,myPayment tab plus

--- a/css/mypage/myPayment.css
+++ b/css/mypage/myPayment.css
@@ -7,6 +7,56 @@ body {
   scroll-behavior: smooth;
   -ms-overflow-style: none;
 }
+
+.hd__inner880 {
+  width: 880px;
+}
+.summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  background-color: #303033;
+  height: 100px;
+}
+
+.summary h1 {
+  font-size: 24px;
+  padding-left: 40px;
+}
+.summary-lists {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+}
+
+.summary-item {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  margin-right: 30px;
+  border-left: 1px solid white;
+  padding-left: 13px;
+}
+
+.summary-title {
+  font-size: 13px;
+  margin-bottom: 7px;
+}
+
+.summary-count {
+  display: flex;
+  align-items: baseline;
+}
+
+.summary-count .number {
+  font-size: 26px;
+}
+
+.summary-count .unit {
+  font-size: 16px;
+  margin-left: 5px;
+}
 /* 0. myP{ayment-body-header */
 .body-header {
   background-color: black;
@@ -109,7 +159,7 @@ body {
   flex-direction: column;
   justify-content: flex-start;
 
-  width: 550px;
+  width: 420px;
 }
 .payment-content1-1 {
   display: flex;
