--- a/components/sidebar/sidebarMyPage.html
+++ b/components/sidebar/sidebarMyPage.html
@@ -26,7 +26,7 @@
             </li>
             <br />
             <li class="item">
-              <a href="../../html/mypage/likeList.html">My-Like</a>
+              <a href="../../html/mypage/likeList.html">My Like</a>
             </li>
 
             <li class="item">
