--- a/css/mypage/LikeList.css
+++ b/css/mypage/LikeList.css
@@ -170,8 +170,19 @@ h3 {
 }
 .LikeList-Card img {
   width: 200px;
+  height: 200px;
 }
 .LikeList-Card-List {
+  display: none;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  gap: 10px;
+}
+/* 탭 활성화 */
+.tab-selected {
+  color: #ca1a5a;
+}
+.contents-active {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto;
