--- a/css/login/consentForm.css
+++ b/css/login/consentForm.css
@@ -42,7 +42,7 @@
     font-weight: bold; 
     cursor: pointer; 
 }
-.tab-active { 
+.tab.active { 
     background: #000; 
     color: #fff; 
     font-weight: bold; 
