feat: [FE] 회원가입 페이지 1차 완성

--- a/css/common/reset.css
+++ b/css/common/reset.css
@@ -205,6 +205,12 @@ table {
     width: 900px;
     margin: 0 auto;
 }
+
+.hd__inner500 {
+    width: 500px;
+    margin: 0 auto;
+}
+
 .hd__inner1400 {
     width: 1400px;
     margin: 0 auto;
